# open_deep_research

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEEP_RESEARCH_GUIDE.md  README.md  pyproject.toml
.claude/agents/: deep-research-coordinator.md
.claude/commands/: deep-research.md
.claude/skills/deep-research/: SKILL.md
.research_runs/mainvest/mainvest-deep-2026-06-27/: foldins-2026-06-27.diff  foldins-2026-06-27.md  report.md  report.pre-foldin-2026-06-27.md
.research_runs/mainvest/mainvest-deep-2026-06-27/edgar/: mantis_offmem.txt  primary_doc.xml
.research_runs/mainvest/mainvest-verify-2026-06-27/: foldin-review-2026-06-27.md  report.md
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/hatties/: formcar_hattiescoffeehouse.txt  hatties_offmo.txt  hatties_rsn.txt  primary_doc.xml
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/luckygoat/: luckygoat_c_ar.txt  luckygoat_financials.txt  luckygoat_offmo.txt  luckygoat_rsn.txt  primary_doc.xml
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/mainvest_holdings/: mainvestformc.txt
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/mantis_ca/: BASE_mantis_rsn.txt  eastcoast2_offmo2final.txt  eastcoast_noteagmt2final.txt  eastcoasterdam_offmo3.txt  mantis_noteagmtca.txt  mantis_offmemca.txt  mantis_offmoca.txt
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/wanderlinger/: primary_doc.xml  wanderlinger_c_ar.txt  wanderlinger_financials.txt  wanderlinger_noteagmt.txt  wanderlinger_offmo.txt
.research_runs/mainvest/mainvest-verify-2026-06-27/edgar/weha/: primary_doc.xml  weha_c_ar.txt  weha_financials.txt  weha_noteagmt.txt  weha_offmo.txt
docs/claude-ai-project/: README.md  knowledge-deep-research.md  project-instructions.md
docs/research/tx-fog-grease-trap-2026/: README.md  compare-prompt.md  questions.md  report.md
docs/research/tx-fog-grease-trap-2026/audit/: claims.json  conflicts.json  notes.md  plan.json  request.md  run.json  sources.json
docs/research/tx-fog-grease-trap-2026/migrations/: 0001_custody_schema.down.sql  0001_custody_schema.up.sql  0002_jurisdiction_fog_rules_and_seed.down.sql  0002_jurisdiction_fog_rules_and_seed.up.sql  README.md
docs/research/tx-fog-grease-trap-2026/verification/: comparison-report.md
docs/research/tx-fog-grease-trap-2026/verification/audit/: request.md  run.json  sources.json
exports/deep-research-web/: SKILL.md
src/claude_research_mcp/: __init__.py  config.py  exa_client.py  extractors.py  http_util.py  models.py  server.py  storage.py  tavily_client.py
tests/claude_research_mcp/: __init__.py  conftest.py  test_server.py  test_storage.py  test_tavily.py
